2015-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Improve message.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c: More fix if SAMBA_CLIENT is not
	  defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: More fix if SAMBA_CLIENT is not defined.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tests.swg: #include "glib-util.h"

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: #include "glib-util.h",
	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_connect):  return a
	  gboolean.
	* perl/Amanda/Tests.swg: #include "glib-init.h"
	* perl/Amanda/Util.swg: #include "match.h"
	* perl/Amanda/Util.swg:  rename crc32 to crc32_add.

2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess, config/config.sub,
	  config/depcomp, config/install-sh, config/missing,
	  config/test-driver, config/ylwrap: Newer version of files.

2015-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check auth on both local and client check.

2015-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Improve message.

2015-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Fix previous patch.

2015-05-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Call ndmp_connection_mover_read with the
	  header size as the offset.

2015-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check all dles of a host have the same auth.

2015-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Fix $failure_from.

2015-05-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server_and_die): Always FAILURE

2015-05-07  Jean-Louis Martineau <martineau@zmanda.com>